--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,3 +1,3 @@
-jdbc.url=jdbc:mysql://localhost:3306/book?useUnicode=true&characterEncoding=UTF-8
+jdbc.url=jdbc:mysql://129.211.187.116:3306/book?useUnicode=true&characterEncoding=UTF-8
 jdbc.username=root
-jdbc.password=123plh
+jdbc.password=root
